name:                sourcemap
version:             0.1.0.0
synopsis:            Implementation of source maps as proposed by Google and Mozilla.
description:         Implementation of source maps, revision 3, proposed by Google and Mozilla here
                     https://wiki.mozilla.org/DevTools/Features/SourceMap and here
                     https://docs.google.com/document/d/1U1RGAehQwRypUTovF1KRlpiOFze0b-_2gc6fAH0KY0k/edit
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     VLQ
  -- other-modules:
  hs-source-dirs:      src
  build-depends:       base ==4.5.*,
                       bytestring