name:                sourcemap
version:             0.1.6
synopsis:            Implementation of source maps as proposed by Google and Mozilla.
description:         Implementation of source maps, revision 3, proposed by Google and Mozilla here
                     <https://wiki.mozilla.org/DevTools/Features/SourceMap> and here
                     <https://docs.google.com/document/d/1U1RGAehQwRypUTovF1KRlpiOFze0b-_2gc6fAH0KY0k/edit>
license:             BSD3
license-file:        LICENSE
author:              Chris Done
stability:           alpha
maintainer:          chrisdone@gmail.com
bug-reports:         https://github.com/chrisdone/sourcemap/issues
copyright:           2012 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type:     git
    location: https://github.com/chrisdone/sourcemap.git

library
  default-language:    Haskell2010
  ghc-options: -O2 -Wall
  exposed-modules:     SourceMap, SourceMap.Types
  other-modules:       VLQ
  hs-source-dirs:      src
  build-depends:       base >= 4.5 && < 5,
                       bytestring >= 0.10.2 && < 0.11,
                       aeson,
                       unordered-containers,
                       attoparsec,
                       process,
                       utf8-string,
                       text


test-suite nodejs
    default-language: Haskell2010
    type:       exitcode-stdio-1.0
    main-is:    Node.hs
    hs-source-dirs: src test
    build-depends: base,
                   sourcemap,
                   process,
                   utf8-string,
                   bytestring,
                   aeson,
                   text,
                   unordered-containers

benchmark vlq
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src bench
  main-is:          Bench/VLQ.hs
  build-depends:    base,
                    criterion,
                    bytestring,
                    random
  ghc-options:      -O2 -Wall
